<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto" >
    <data>
        <variable
                name="vm"
                type="com.nexters.yetda.android.birthday.BirthdayViewModel" />
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <LinearLayout
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/side_margin"
                android:paddingRight="@dimen/side_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/txt_medium"
                    android:text="@string/birthday_q"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/txt_big"
                    android:hint="@string/birthday_a"/>
        </LinearLayout>
        <TextView
                style="@style/btn"
                android:onClick="@{()->vm.clickNextButton()}"
                android:text="@string/next" />
    </LinearLayout>
</layout>
